--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "mineflayer": "^4.31.0",
-    "mineflayer-pathfinder": "^2.4.5"
+    "minecraft-data": "^3.97.0",
+    "mineflayer": "^4.32.0",
+    "mineflayer-pathfinder": "^2.4.5",
+    "prismarine-item": "^1.17.0"
   }
 }
